live apps fixed nowrap test9

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -272,7 +272,7 @@ figure {
   a,
   > img {
     @include breakpoint($small) {
-      width: calc(32.5% - 0.5em);
+      width: calc(33% - 0.5em);
     }
     border: 0.3em solid transparent;
   }
